bat.bool1.makes10.Makes10.scala.error
Erreur de compilation :
Makes10:3: error: ';' expected but ')' found.
  (a+b)==10)||(a==10)||(b==10)
           ^