bat.bool1.makes10.Makes10.scala.code
def makes10(a:Int, b:Int): Boolean = {
  (a+b)==10)||(a==10)||(b==10)
}